--- a/bibliography.bib
+++ b/bibliography.bib
@@ -213,3 +213,9 @@ keywords = {aircraft motion, coordinate systems, Earth's gravity, Euler angles, 
 title = {{Aircraft Control and Simulation: Dynamics, Controls Design, and Autonomous Systems}},
 year = {2015},
 }
+
+@misc{GpsGov,
+  title = {{GPS Accuracy}},
+  howpublished = {\url{http://www.gps.gov/systems/gps/performance/accuracy/}},
+  note = {Accessed: 2017-04-23}
+}
