minor edits to Exp Results

--- a/Exp_Results.tex
+++ b/Exp_Results.tex
@@ -1,6 +1,6 @@
 \chapter{Experimental Results} \label{ch:Exp_Results}
 
-\section{Long Walk Trials}
+\section{Long Walk Trials} \label{sec:long_walk}
 
 Figures~\ref{fig:longWalk1_xyz}--\ref{fig:longWalk5_xyz} plot the vehicle's $x$-, $y$-, and $z$-coordinates over time. These plots demonstrate that the UKF's pose estimates were able to track the vehicle's $y$-position accurately over the length of each long walk trial. The plots also show that the UKF pose estimates exhibit aberrant behavior causing the vehicle's $z$-position to rise more and more the farther the vehicle moves from the origin. The shaded region in Figure~\ref{fig:longWalk1_xyz} clearly highlights this behavior. The vehicle's estimated altitude rises steadily to a maximum of about 1.4~meters, although in truth the vehicle's altitude remained constant throughout the trial. The vehicle's maximum vertical error coincides with its maximal displacement from $\left( 0,\ 0,\ 0 \right)$.
 
@@ -44,7 +44,7 @@ In each trial, the UKF output showed increased ``shakiness'' in the form of larg
 
 \section{Box Pattern Trials}
 
-Figures~\ref{fig:box1_3d}, \ref{fig:box2_3d}, \ref{fig:box3_3d}, \ref{fig:box4_3d}, and \ref{fig:box5_3d} plot the estimated and measured 3D trajectories of the mobile test stand during the five box pattern trials. Each of these plots exhibits the same bowl-shaped distortion seen previously in the trials of the long walk experiment. The $z$-position of the vehicle can be seen trending upward more and more the farther the vehicle moves from the origin. This causes the apparent slant in the estimated trajectories. This altitudinal error is most pronounced at the forward-left corner in each 3D plot, where the vehicle is farthest from the origin. The estimated trajectory also becomes noticeably shakier, in terms of vertical oscillations, in the neighborhood of the forward-left corner. These oscillations begin to appear on the first (right-side) leg of the trajectory and increase in magnitude up to the forward-left corner, at which point they begin to decrease in magnitude on the way back to the starting position.
+Figures~\ref{fig:box1_3d}, \ref{fig:box2_3d}, \ref{fig:box3_3d}, \ref{fig:box4_3d}, and \ref{fig:box5_3d} plot the estimated and Vicon-measured 3D trajectories of the mobile test stand during the five box pattern trials. Each of these plots exhibits the same bowl-shaped distortion seen previously in the trials of the long walk experiment. The $z$-position of the vehicle can be seen trending upward more and more the farther the vehicle moves from the origin. This causes the apparent slant in the estimated trajectories. This altitudinal error is most pronounced at the forward-left corner in each 3D plot, where the vehicle is farthest from the origin. The estimated trajectory also becomes noticeably shakier, in terms of vertical oscillations, in the neighborhood of the forward-left corner. These oscillations begin to appear on the first (right-side) leg of the trajectory and increase in magnitude up to the forward-left corner, at which point they begin to decrease in magnitude on the way back to the starting position.
 
 The 2D trajectory plots (Figures~\ref{fig:box1_2d}, \ref{fig:box2_2d}, \ref{fig:box3_2d}, \ref{fig:box4_2d}, and \ref{fig:box5_2d}) are presented alongside the 3D plots to demonstrate the general accuracy of the UKF's estimates in planar motion. The UKF output follows the Vicon output faithfully, with some exceptions near the corners of the box pattern. This is caused partly by the bowl-shaped distortion mentioned previously, and partly by the fact that the mobile test stand moves on caster wheels. When the test stand changes direction, the caster wheels rotate underneath the cart, causing a small lateral shift in the test stand's trajectory. This is particularly apparent in Figures~\ref{fig:box2_2d} and \ref{fig:box4_2d}, where a clear ``wiggling'' can be seen as the vehicle was pulled back from the top left corner of the pattern, and in Figure~\ref{fig:box5_2d}, where the estimated trajectory ``sags'' in the bottom left corner. These lateral disturbances, though small in magnitude (likely on the order of 3--5~cm) were picked up by PTAM and overestimated due to lens distortion.
 
@@ -129,7 +129,7 @@ Trial~3 (Figures~\ref{fig:box3_2d} and \ref{fig:box3_3d}) exhibits an anomalous 
 
 \section{Error Analysis}
 
-To determine the effectiveness of the UKF framework in estimating the position of a vehicle, we develop a number of statistical metrics to characterize the varieties and magnitudes of error in the filter's output. In this section, we perform statistical analyses on the data streams collected during the box pattern trials. The positional error in the long walk trials is effectively unbounded. Because of the lens distortion defect mentioned previously, moving the vehicle in long translations produces ever-increasing altitudinal error which distorts lateral sensitivity. As a result, we examine here only the box pattern trials to characterize the system's error in a scenario where the combination of sensors being used would be a more reasonable choice.
+To determine the effectiveness of the UKF framework in estimating the position of a vehicle, we develop a number of statistical metrics to characterize the varieties and magnitudes of error in the filter's output. As shown in Section~\ref{sec:long_walk}, the positional error in the long walk trials is effectively unbounded. Because of the lens distortion defect, moving the vehicle in long translations produces ever-increasing altitudinal error which distorts lateral sensitivity. As a result, in this section, we examine only the box pattern trials to characterize the system's error in a scenario where the combination of sensors being used would be a more reasonable choice.
 
 Positional errors in the UKF output were computed after each trial per the following relationships:
 %
