added proc noise

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -219,3 +219,11 @@ year = {2015},
   howpublished = {\url{http://www.gps.gov/systems/gps/performance/accuracy/}},
   note = {Accessed: 2017-04-23}
 }
+
+@inbook {Brown2012,
+author = {Brown, Robert Grover and Hwang, Patrick Y. C.},
+publisher = {Wiley},
+isbn = {978-0470609699},
+title = {{Introduction to Random Signals and Applied Kalman Filtering}},
+year = {2012}
+}
