--- a/Alg_Design.tex
+++ b/Alg_Design.tex
@@ -313,39 +313,44 @@ where $\mathbf{I}_{m_{a} \times m_{a}}$ is a $10 \times 10$ identity matrix and 
 where $\bm{\epsilon}_{k} \sim \mathcal{N} \left( 0,\ \mathbf{R} \right)$ is additive Gaussian measurement noise assumed to have zero mean and covariance $\mathbf{R}$ (explored in Section~\ref{sec:R_Matrix}).
 
 \subsection{Process Noise Covariance Matrix} \label{sec:Q_Matrix}
-\todo{diagonality?}
-The process noise covariance matrix $\mathbf{Q}_{k} \in \mathbb{R}^{n \times n}$ is symmetric, time-dependent, and positive definite. We assume that its nonzero coefficients are a function of multiple integrations between the linear accelerations and angular velocities measured by the vehicle's 3-axis accelerometer and 3-axis gyroscope.
 
-We assume that all axes of the accelerometer and gyroscope exhibit white noise with known standard deviations $\sigma_{a}$ and $\sigma_{\omega}$, respectively\footnote{This claim of equal standard deviations between axes is supported by the IMU data sheet.}. We further assume that no cross-axis covariance exists between any two accelerometer axes or any two gyroscope axes.
+The process noise covariance matrix $\mathbf{Q} \in \mathbb{R}^{n \times n}$ is symmetric and positive definite. We assume that its nonzero coefficients are a function of multiple integrations between the linear accelerations and angular velocities measured by the vehicle's 3-axis accelerometer and 3-axis gyroscope. We further assume that all axes of the accelerometer and gyroscope exhibit white noise with known variances\footnote{This claim of equal variances between axes is supported by the IMU data sheet.} $\sigma_{a}^{2} = 8.66125 \times 10^{-6}$~m$^{2}$/s$^{4}$ and $\sigma_{\omega}^{2} = 1.21847 \times 10^{-7}$~rad$^{2}$/s$^{2}$, as reported by the IMU during operation. We further assume that no cross-axis covariance exists between any two accelerometer axes or any two gyroscope axes\footnote{Also reported by the IMU.}.
 
-For the sake of convenient estimation, we assume that the accelerometer and gyroscope variance terms grow linearly over each discrete time step $\Delta t$. Thus, in the case of the $x$-axis accelerometer and the $x$-axis gyroscope, the corresponding terms of $\mathbf{Q}_{k}$ would be
+Because the IMU runs at a constant rate of 250~Hz, we assume $\mathbf{Q}$ is time-invariant. We further assume that the nonzero covariance terms associated with the unmeasured quantities $\mathbf{p}$, $\mathbf{q}$, and $\mathbf{v}$ are related to the variance terms by integration over a constant time step $\Delta t$. Let the variance terms for the accelerations and angular rates be set as
 %
 \begin{equation}
-Q_{a_{x},a_{x}} = \sigma_{a} \Delta t
+Q_{\ddot{x},\ \ddot{x}} = \sigma_{a}^{2}
 \end{equation}
 %
 and
 %
 \begin{equation}
-Q_{\omega_{x},\omega_{x}} = \sigma_{\omega} \Delta t
+Q_{\omega_{x},\ \omega_{x}} = \sigma_{\omega}^{2}
 \end{equation}
 %
-respectively. We can now estimate the other nonzero terms of $\mathbf{Q}_{k}$ according to their integral relationships with the acceleration and angular velocity measurements.
+respectively. We can now estimate the other nonzero terms of $\mathbf{Q}$ according to their integral relationships with the acceleration and angular velocity measurements. In the example case of the $x$-velocity, the variance would be computed as
+%
+\begin{align}
+Q_{\dot{x},\ \dot{x}} = \int^{\Delta t}_{0} \sigma_{a}^2\ dt
+\end{align}
 
-\todo{integral equations}
-
-We assume no coupling between the angular quantities ($\mathbf{q}$ and $\bm{\Omega}$) and the linear quantities ($\mathbf{p}$, $\mathbf{v}$, and $\mathbf{a}$), making the process noise covariance matrix largely sparse. This assumption logically stems from the small angle assumption. Because the IMU runs at 250~Hz, we assume that the vehicle makes only small rotations between IMU measurements. 
-
-\todo{full Q matrix}
-
+This process of integrating known noise coefficients to determine the covariance terms associated with integrated quantities, detailed in \cite{Brown2012}, proved ineffective in preliminary experiments, as the resulting $\mathbf{Q}$ matrix made the filter numerically unstable. To compensate, this matrix was replaced by a diagonal estimated $\mathbf{Q}$ in which all of the coefficients were overestimated in an attempt to account for any unknown sources of error. The original terms were on the order of $10^{-6}$ or smaller, whereas the new matrix was defined as
+%
+\begin{equation}
+\mathbf{Q} = k_{\mathbf{Q}}\ \mathbf{I}_{n \times n}
+\end{equation}
+%
+with $k_{\mathbf{Q}} = 0.01$. This replacement produced numerically stable output and was used for all of the experimental trials detailed in Chapters~\ref{ch:Exp_Design} and \ref{ch:Exp_Results}.
 
 \subsection{Measurement Noise Covariance Matrix} \label{sec:R_Matrix}
-\todo{diagonality? Q-R ratio?}
-The matrix $\mathbf{R} \in \mathbb{R}^{m \times m}$ models the covariance between measurements made by the pose sensor, PTAM. Like the process noise covariance matrix $\mathbf{Q}_{k}$, the measurement noise covariance matrix $\mathbf{R}$ is symmetric and positive definite. However, for the purposes of this experiment, $\mathbf{R}$ is assumed to be time-invariant due to nearly constant feature density in the experimental scene. Because the vehicle camera moves across the scene at an almost constant height (that is, at a nearly constant distance to the features it observes on the floor), the measurement noise covariance of the pose sensor is assumed to be approximately constant in time. The coefficients of $\mathbf{R}$ were estimated by numerically computing the covariances between raw measurements from PTAM and the ``ground truth'' supplied by a Vicon motion capture system\footnote{\url{https://www.vicon.com/}}.
 
-The resulting $\mathbf{R}$ matrix is as follows:
+The matrix $\mathbf{R} \in \mathbb{R}^{m_{a} \times m_{a}}$ models the covariance between measurements made by the pose sensor, PTAM. Like the process noise covariance matrix $\mathbf{Q}$, the measurement noise covariance matrix $\mathbf{R}$ is symmetric and positive definite. For the purposes of this experiment, $\mathbf{R}$ is assumed to be time-invariant due to nearly constant feature density in the experimental scene. Because the vehicle camera moves through the environment at an almost constant height (that is, at a nearly constant distance to the features it observes on the floor), the measurement noise covariance of the pose sensor is assumed to be approximately constant in time. The coefficients of $\mathbf{R}$ were estimated by numerically computing the autocovariances between PTAM measurements over time in a steady-state configuration. These variances were computed as being on the order of $10^{-3}$ or less for all terms. However, during preliminary experiments, the dense estimated covariance matrix caused the filter's output to drift uncontrollably. Therefore, we instead assumed a diagonal measurement noise covariance matrix and attempted to compensate by overestimating the magnitude of its terms. Setting $\mathbf{R}$ as
 %
-\todo{R Matrix}
+\begin{equation}
+\mathbf{R} = k_{\mathbf{R}}\ \mathbf{I}_{m_{a} \times m_{a}}
+\end{equation}
+%
+with $k_{\mathbf{R}} = 0.01$ made the filter numerically stable, and thus was used for all experimental trials detailed in Chapters~\ref{ch:Exp_Design} and \ref{ch:Exp_Results}.
 
 \section{Software Design Considerations}
 
