minor tweaks everywhere

--- a/Abstract.tex
+++ b/Abstract.tex
@@ -1,3 +1,3 @@
 \chapter*{Abstract}
 
-This thesis presents the formulation and implementation of an Unscented Kalman Filter (UKF) framework for fusion of visual and inertial sensor data in unmanned aircraft navigation. Specifically, we fuse sensor readings from a 3-axis accelerometer, 3-axis gyroscope, and a Simultaneous Localization and Mapping (SLAM) algorithm to estimate the pose of an aircraft, such as a quadcopter, capable of hovering flight. We discuss the formulation of our UKF fusion algorithm, the development of a Robot Operating System (ROS) software package implementing the algorithm, and experiments in which this algorithm was used to track the motion of a physical vehicle simulating hovering flight in an indoor environment. We assess the filter's effectiveness by comparing its output to that of a Vicon motion capture system. We then discuss possible applications of this system and future work that may build upon the results developed herein.
+This thesis presents the formulation and implementation of an Unscented Kalman Filter (UKF) framework for fusion of visual and inertial sensor data in unmanned aircraft navigation. Specifically, we fuse sensor readings from a 3-axis accelerometer, 3-axis gyroscope, and a Simultaneous Localization and Mapping (SLAM) algorithm to estimate the pose of an aircraft, such as a quadcopter, capable of hovering flight. We discuss the formulation of our UKF fusion algorithm, the development of a Robot Operating System (ROS) software package implementing the algorithm, and experiments in which this algorithm was used to track the motion of a physical vehicle simulating hovering flight in an indoor environment. In laboratory testing, the system was able to localize the test vehicle consistently with a mean total positional error of less than 10~cm and maximal error never exceeding 25.96~cm, as compared to the output of a Vicon motion capture system. We discuss possible applications of this system and future work that may build upon the results developed herein.
