--- a/Exp_Results.tex
+++ b/Exp_Results.tex
@@ -46,7 +46,7 @@ In each trial, the UKF output showed increased ``shakiness'' in the form of larg
 
 Figures~\ref{fig:box1_3d}, \ref{fig:box2_3d}, \ref{fig:box3_3d}, \ref{fig:box4_3d}, and \ref{fig:box5_3d} plot the estimated and Vicon-measured 3D trajectories of the mobile test stand during the five box pattern trials. Each of these plots exhibits the same bowl-shaped distortion seen previously in the trials of the long walk experiment. The $z$-position of the vehicle can be seen trending upward more and more the farther the vehicle moves from the origin. This causes the apparent slant in the estimated trajectories. This altitudinal error is most pronounced at the forward-left corner in each 3D plot, where the vehicle is farthest from the origin. The estimated trajectory also becomes noticeably shakier, in terms of vertical oscillations, in the neighborhood of the forward-left corner. These oscillations begin to appear on the first (right-side) leg of the trajectory and increase in magnitude up to the forward-left corner, at which point they begin to decrease in magnitude on the way back to the starting position.
 
-The 2D trajectory plots (Figures~\ref{fig:box1_2d}, \ref{fig:box2_2d}, \ref{fig:box3_2d}, \ref{fig:box4_2d}, and \ref{fig:box5_2d}) are presented alongside the 3D plots to demonstrate the general accuracy of the UKF's estimates in planar motion. The UKF output follows the Vicon output faithfully, with some exceptions near the corners of the box pattern. This is caused partly by the bowl-shaped distortion mentioned previously, and partly by the fact that the mobile test stand moves on caster wheels. When the test stand changes direction, the caster wheels rotate underneath the cart, causing a small lateral shift in the test stand's trajectory. This is particularly apparent in Figures~\ref{fig:box2_2d} and \ref{fig:box4_2d}, where a clear ``wiggling'' can be seen as the vehicle was pulled back from the top left corner of the pattern, and in Figure~\ref{fig:box5_2d}, where the estimated trajectory ``sags'' in the bottom left corner. These lateral disturbances, though small in magnitude (likely on the order of 3--5~cm) were picked up by PTAM and overestimated due to lens distortion.
+The 2D trajectory plots (Figures~\ref{fig:box1_2d}, \ref{fig:box2_2d}, \ref{fig:box3_2d}, \ref{fig:box4_2d}, and \ref{fig:box5_2d}) are presented alongside the 3D plots to demonstrate the general accuracy of the UKF's estimates in planar motion. The UKF output follows the Vicon output faithfully, with some exceptions near the corners of the box pattern. This is caused partly by the bowl-shaped distortion mentioned previously, and partly by the fact that the mobile test stand moves on caster wheels. When the test stand changes direction, the caster wheels rotate underneath the cart, causing a small lateral shift in the test stand's trajectory. This is particularly apparent in Figures~\ref{fig:box2_2d} and \ref{fig:box4_2d}, where a clear ``wiggling'' can be seen as the vehicle was pulled back from the top left corner of the pattern, and in Figure~\ref{fig:box5_2d}, where the estimated trajectory ``sags'' in the bottom left corner. These lateral disturbances, though small in magnitude (likely on the order of 3--5~cm), were picked up by PTAM and overestimated due to lens distortion.
 
 Trial~3 (Figures~\ref{fig:box3_2d} and \ref{fig:box3_3d}) exhibits an anomalous $x$-directional offset along the first leg of the trajectory. This was most likely caused by inadvertent jostling of the test stand before initializing PTAM. The test stand was rotated at an angle to Vicon's $x$-axis at the outset of the trial, causing the estimated trajectory to be computed at an angle to the ground truth trajectory. Once the test stand reached the first corner, it must have been rotated slightly, causing the estimated trajectory to rejoin the ground truth measurements provided by Vicon.
 
@@ -142,7 +142,7 @@ Positional errors in the UKF output were computed after each trial per the follo
 These positional errors were computed over the length of each coordinate time history, creating an error history for each trial. The mean coordinate errors and their variances were then computed from these error histories to characterize the Gaussian noise distribution in each data set. The terms $\mu_{x}$, $\mu_{y}$, and $\mu_{z}$ encode the mean error in $x$, $y$, and $z$, respectively. The associated variances of these errors are represented by $\sigma_{x}^{2}$, $\sigma_{y}^{2}$, and $\sigma_{z}^{2}$. These statistics are presented in Table~\ref{tab:means_and_vars}.
 
 \begin{table}[h]\centering
-\caption[Coordinate Error]{Coordinate error mean and variance values by trial.}
+\caption[Coordinate Error Mean and Variance Values]{Coordinate error mean and variance values by trial.}
 \begin{tabular}[c]{crr|rr|rr}
 \toprule
 Trial & $\mu_{x}$ [m] & $\sigma_{x}^{2}$ [m$^{2}$] & $\mu_{y}$ [m] & $\sigma_{y}^{2}$ [m$^{2}$] & $\mu_{z}$ [m] & $\sigma_{z}^{2}$ [m$^{2}$] \\
