--- a/Introduction.tex
+++ b/Introduction.tex
@@ -51,10 +51,6 @@ In this section, we first establish the goals of the testing regimen and then di
 
 In Experimental Results, we evaluate the system's performance during testing and seek out any limiting factors that influence estimation accuracy. We probe for possible improvements to the algorithm and provide a notional understanding of the system's theoretical effectiveness in real-world scenarios.
 
-\subsection*{Conclusions}
+\subsection*{Conclusions and Future Work}
 
-We summarize the contributions made in this thesis, the effectiveness of the \texttt{kalman\_sense} ROS package, and the insights acquired during programming and testing. 
-
-\subsection*{Future Work}
-
-In Future Work, we expand upon the possible improvements proposed in Experimental Results and also offer a number of applications for the algorithms and processes developed herein. Specific examples of heterogeneous fleet management and Unmanned Traffic Management (UTM) are explored.
+We summarize the contributions made in this thesis, the effectiveness of the \texttt{kalman\_sense} ROS package, and the insights acquired during programming and testing. We then expand upon the possible improvements proposed in Experimental Results and also offer a number of applications for the algorithms and processes developed herein. Specific use cases, such as emergency response and autonomous package delivery, are considered.
