added data flow images to Alg Design

--- a/Conclusions.tex
+++ b/Conclusions.tex
@@ -10,7 +10,7 @@ Nevertheless, the system faces several critical challenges. The PTAM implementat
 
 Perhaps the more stringent requirement on this system is that it be used in environments with ample visual geometry. The SLAM algorithm used in experimentation was susceptible to losing tracking if the density of visible features was not sufficiently high. This would be a necessary condition for any SLAM/VO algorithm, meaning that the system can only be deployed in areas with plenty of high-contrast features (and sufficient lighting by which to see them).
 
-With all of this being said, the UKF framework developed here still represents a useful jumping-off point for further work. Future developments in this area (explored in detail in the next section) will likely revolve around increasing accuracy and robustness, the two principle challenges of any navigation system. Even the much-glorified Global Positioning System is not without its systematic faults and environmental limitations. Because of its generality, this work could be applied to great effect in numerous state estimation scenarios. Beyond rotorcraft and fixed-wing airplanes, this UKF framework could be adapted for use with spacecraft, surface vessels, undersea vehicles, and automobiles. Due to increasing demand for intelligent systems and unmanned vehicles of many varieties, it is likely that research in this area will continue for decades to come. In any case, the emphasis will likely remain on higher accuracy and greater robustness. With the growing trend of miniaturization and the increasing density of human populations, the need for ever more precise localization will always be growing.
+With all of this being said, the UKF framework developed here still represents a useful jumping-off point for further work. Future developments in this area (explored in detail in the next section) will likely revolve around increasing accuracy and robustness, the two principle challenges of any navigation system. Even the much-glorified Global Positioning System is not without its systemic faults and environmental limitations. Because of its generality, this work could be applied to great effect in numerous state estimation scenarios. Beyond rotorcraft and fixed-wing airplanes, this UKF framework could be adapted for use with spacecraft, surface vessels, undersea vehicles, and automobiles. Due to increasing demand for intelligent systems and unmanned vehicles of many varieties, it is likely that research in this area will continue for decades to come. In any case, the emphasis will likely remain on higher accuracy and greater robustness. With the growing trend of miniaturization and the increasing density of human populations, the need for ever more precise localization will always be present.
 
 \section{Future Work}
 
